# blades-server-rewritten

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
blades_lib/: Cargo.toml
blades_lib/src/: lib.rs
blades_lib/src/game_data/: mod.rs
blades_lib/src/user_data/: backpack.rs  dungeon.rs  mod.rs  quest.rs  util.rs  wallet.rs
blades_lib/src/util/: quest.rs
blades_user_data/: Cargo.toml
blades_user_data/src/: backpack.rs  dungeon.rs  lib.rs  quest.rs  wallet.rs
build-app/: build_patched_apk.sh
data/: reference_initial_quest_response.json
database/: Cargo.toml
database/src/: lazy_writer_and_cache.rs  lib.rs
game_data/: Cargo.toml
game_data/src/: lib.rs
migrations/2026-04-09-164018-0000_create_users/: up.sql
migrations/2026-04-09-184438-0000_create_characters/: up.sql
migrations/2026-04-11-071152-0000_add_wallets_and_inventory_to_characters/: down.sql  up.sql
migrations/2026-04-12-081244-0000_add_quest_table/: down.sql  up.sql
migrations/2026-04-18-132237-0000_add_quest_dungeon_status/: down.sql  up.sql
migrations/2026-04-23-163806-0000_add_dungeon_initial_state/: down.sql  up.sql
script/: mitmproxy_script.py
script/data_parser/: main.py  parse_util.py  resolve_refs.py
server/: Cargo.toml
server/src/: abyss.rs  analytics.rs  analytics_events.rs  announcements.rs  authentification.rs  challenge.rs  character.rs  character_data.rs  character_data_storage.rs  craft.rs  daily_reward.rs  dungeon.rs  dungeon_update.rs  error.rs  events.rs  gameevent.rs  global_gift.rs  global_shop.rs  inventory.rs  json_db.rs  main.rs  migrate_db.rs  models.rs  quest.rs  schema.rs  session.rs  status.rs  town.rs  util.rs  wallet.rs
server/src/arena/: avatar.rs  leaderboards.rs  matchmaking.rs  mod.rs
