[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
blades_user_data = { path = "../blades_user_data" }
anyhow = "1.0.102"
mio = "1.2.0" # somehow, it doesn’t resolve well without excplicitly putting that (from tokio)
tokio = { version = "1.51.0", features = ["full"] }
tokio-postgres = { version = "0.7.17", features = ["with-serde_json-1", "with-uuid-1"] }
log = "0.4.29"
