[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
mio = "1.2.0" # somehow, it doesn’t resolve well without excplicitly putting that (from tokio)
tokio = { version = "1.51.0", features = ["full"] }
blades_user_data = { path = "../blades_user_data" }
clap = { version = "4.6.0", features = ["derive"] }
deadpool-postgres = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["serde", "v4", "v7", "v8"] }
tokio-postgres = { version = "0.7.17", features = ["with-serde_json-1", "with-uuid-1"] }
rand = "0.10.0"
actix-files = "0.6.10"
futures-util = "0.3.32"
